<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lavender_bg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SignInFragment">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textAlignment="center"
                android:textColor="@color/lavender2"
                android:textSize="40sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/firstName"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginHorizontal="3dp"
                    android:background="@drawable/custom_edit_text"
                    android:drawablePadding="10dp"
                    android:hint="@string/firstName"
                    android:inputType="textPersonName"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/lavender2" />

                <EditText
                    android:id="@+id/lastName"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginHorizontal="3dp"
                    android:background="@drawable/custom_edit_text"
                    android:drawablePadding="10dp"
                    android:hint="@string/lastName"
                    android:inputType="textPersonName"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/lavender2" />

            </LinearLayout>

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/custom_edit_text"
                android:drawableLeft="@drawable/baseline_person_24"
                android:drawablePadding="10dp"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/lavender2" />


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/custom_edit_text"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:drawablePadding="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/lavender2" />

            <Button
                android:id="@+id/signupButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/lavender2"
                android:text="@string/signup"
                android:textSize="20dp"
                app:cornerRadius="20dp" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>